--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
    <hr class="bg-dark hr1">
 </div>
    <div class="d-flex justify-content-center  bg-dark">
-   <p stlye="padding-top:65px; font-family:monospace;" class="display-5 p-2 rounded border text-white " id="identity"></p>
+   <p stlye="padding-top:65px; font-family:monospace;" class="display-5 p-2 rounded border text-white " id="identity">NzM4NDYz</p>
 	</div>
    <div class="d-flex bg-dark justify-content-center">
 		<div class="row bg-dark absolute-fixed border border-light">
@@ -34,7 +34,7 @@
 <div id="submit_form">
   <div style="visibility: visible !important;" class=" d-flex justify-content-center  bg-darkr">
       <div class="justify-content-center">
-         <select name="size" class=" p-3 border border-light btn btn-dark dropdown-toggle"  id="size">
+         <select name="size" class=" p-3 border border-light btn btn-dark dropdown-toggle" id="size">
             <option value="30px">Small</option>
             <option value="35px">Medium</option>
             <option value="45px">Large</option>
@@ -42,7 +42,7 @@
          </select>
       </div>
       <div class="justify-content-center">
-         <select  class=" p-3 border border-light btn btn-dark dropdown-toggle"  id="color">
+         <select class=" p-3 border border-light btn btn-dark dropdown-toggle" id="color">
             <option value="white">White</option>
             <option value="blue">Blue</option>
             <option value="red">Red</option>
@@ -51,7 +51,7 @@
          </select>
       </div>
       <div class="justify-content-center">
-         <select  class=" p-3 border border-light btn btn-dark dropdown-toggle"  id="decoration">
+         <select class=" p-3 border border-light btn btn-dark dropdown-toggle" id="decoration">
             <option value="none">None</option>
             <option value="underline">Underline</option>
             <option value="overline">Overline</option>
@@ -59,38 +59,40 @@
       </div>
    </div>
    <span class="p-2"></span>
-	<form id="form" class=" d-flex  justify-content-center form-control-md border-dark rounded" style="padding-bottom:65px;" action="{{ url_for('submit') }}" method="post">
-      <input type="text" name="confession_send" class="justify-content-center border-bottom shadow-textarea rep_text"  size="35">
-		<input type="text" name="identity_send"  class="col-sm-12" id="identity_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;"> 
-      <input type="text" name="size_send"  class="col-sm-12" id="size_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;"> 
-      <input type="text" name="color_send"  class="col-sm-12" id="color_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;">
-      <input type="text" name="decoration_send"  class="col-sm-12" id="decoration_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;">
-      <input type="text" name="time_send"  class="col-sm-12" id="time_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;">
+	<form id="form" class=" d-flex  justify-content-center form-control-md border-dark rounded" style="padding-bottom:65px;" action="/submit" method="post">
+      <input type="text" name="confession_send" class="justify-content-center border-bottom shadow-textarea rep_text" id="confession_input" size="35">
+		<input type="text" name="identity_send" class="col-sm-12" id="identity_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;"> 
+      <input type="text" name="size_send" class="col-sm-12" id="size_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;"> 
+      <input type="text" name="color_send" class="col-sm-12" id="color_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;">
+      <input type="text" name="decoration_send" class="col-sm-12" id="decoration_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;">
+      <input type="text" name="time_send" class="col-sm-12" id="time_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;">
 
    </form>
 </div>
    <div class="d-flex justify-content-center" style="display:none !important;" id="all_posts">
-  <button class="p-3 border border-light col-md-4 btn btn-dark" onclick="Get_All_Posts(current_identity)">Get All Posts From This User</button>
+  <button class="p-3 border border-light col-md-4 btn btn-dark" onclick="display_users_posts(Get_All_Posts(current_identity))">Get All Posts From This User</button>
   </div>
   <span class="p-2"></span>
 
    <div id="confession" style="visibility:hidden !important;"> 
-   <p id="confession_info" class=" display-5 bg-dar border-light rounded border d-flex justify-content-center p-2 text-white"></p>
-   <p id="confession_display"  class=" bg-dark d-flex justify-content-center p-2"></p>
+   <p id="confession_info" class=" display-5 bg-dar border-light rounded border d-flex justify-content-center p-2 text-white">Posted by: NzM4NDYz on 10/25/2021, 9:17:16 AM</p>
+   <p id="confession_display" class=" bg-dark d-flex justify-content-center p-2" style="color: green; font-size: 30px; text-decoration: none;">YO</p>
    </div>
    <div>
-      <div id="confession_all"> </div>
+      <div id="confession_all" style="visibility: visible  !important"></div>
    </div>
-
-   <script id="for_delete"> let myObject =  '{{ json| tojson | safe }}' </script>
+ 
+   
+   <script src="//unpkg.com/string-similarity/umd/string-similarity.min.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-   <script src="{{url_for('static', filename='assets/javascript/switch_input.js')}}"></script>
-   <script src="{{url_for('static', filename='assets/javascript/generate_number.js')}}"></script>
-   <script src="{{url_for('static', filename='assets/javascript/update_screen.js')}}"></script>
-   <script src="{{url_for('static', filename='assets/javascript/get_time.js')}}"></script>
-   <script src="{{url_for('static', filename='assets/javascript/identity_assign.js')}}"></script>
-   <script src="{{url_for('static', filename='assets/javascript/apply_stats.js')}}"></script>
-   <script src="{{url_for('static', filename='assets/javascript/get_all_posts.js')}}"></script>
+   <script src="/static/assets/javascript/switch_input.js"></script>
+   <script src="/static/assets/javascript/generate_number.js"></script>
+   <script src="/static/assets/javascript/update_screen.js"></script>
+   <script src="/static/assets/javascript/get_time.js"></script>
+   <script src="/static/assets/javascript/identity_assign.js"></script>
+   <script src="/static/assets/javascript/apply_stats.js"></script>
+   <script src="/static/assets/javascript/get_all_posts.js"></script>
+   <script src="/static/assets/javascript/check_sim.js"></script>
 
 </body>
 </html>
